--- a/IoT/donghyeong/GUI/mainwindow.ui
+++ b/IoT/donghyeong/GUI/mainwindow.ui
@@ -16,6 +16,99 @@
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <widget class="QStackedWidget" name="stackedWidget">
+     <widget class="QWidget" name="video_page">
+      <widget class="QPushButton" name="video_home_button">
+       <property name="geometry">
+        <rect>
+         <x>490</x>
+         <y>250</y>
+         <width>75</width>
+         <height>24</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Home</string>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="video_next_button">
+       <property name="geometry">
+        <rect>
+         <x>490</x>
+         <y>350</y>
+         <width>75</width>
+         <height>24</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Next</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="video_label">
+       <property name="geometry">
+        <rect>
+         <x>440</x>
+         <y>40</y>
+         <width>50</width>
+         <height>16</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>video</string>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="video_prev_button">
+       <property name="geometry">
+        <rect>
+         <x>500</x>
+         <y>300</y>
+         <width>75</width>
+         <height>24</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Prev</string>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="record_stop_button">
+       <property name="geometry">
+        <rect>
+         <x>200</x>
+         <y>330</y>
+         <width>75</width>
+         <height>24</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Stop</string>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="record_start_button">
+       <property name="geometry">
+        <rect>
+         <x>80</x>
+         <y>330</y>
+         <width>75</width>
+         <height>24</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Record</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="video_stream">
+       <property name="geometry">
+        <rect>
+         <x>50</x>
+         <y>40</y>
+         <width>341</width>
+         <height>251</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>TextLabel</string>
+       </property>
+      </widget>
+     </widget>
      <widget class="QWidget" name="main_page">
       <widget class="QPushButton" name="main_next_button">
        <property name="geometry">
@@ -41,19 +134,6 @@
        </property>
        <property name="text">
         <string>Close</string>
-       </property>
-      </widget>
-      <widget class="QLabel" name="video_stream">
-       <property name="geometry">
-        <rect>
-         <x>120</x>
-         <y>80</y>
-         <width>341</width>
-         <height>251</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>TextLabel</string>
        </property>
       </widget>
      </widget>
@@ -277,60 +357,6 @@
         <rect>
          <x>330</x>
          <y>360</y>
-         <width>75</width>
-         <height>24</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>Prev</string>
-       </property>
-      </widget>
-     </widget>
-     <widget class="QWidget" name="video_page">
-      <widget class="QPushButton" name="video_home_button">
-       <property name="geometry">
-        <rect>
-         <x>490</x>
-         <y>250</y>
-         <width>75</width>
-         <height>24</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>Home</string>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="video_next_button">
-       <property name="geometry">
-        <rect>
-         <x>450</x>
-         <y>410</y>
-         <width>75</width>
-         <height>24</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>Next</string>
-       </property>
-      </widget>
-      <widget class="QLabel" name="video_label">
-       <property name="geometry">
-        <rect>
-         <x>290</x>
-         <y>160</y>
-         <width>50</width>
-         <height>16</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>video</string>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="video_prev_button">
-       <property name="geometry">
-        <rect>
-         <x>500</x>
-         <y>300</y>
          <width>75</width>
          <height>24</height>
         </rect>
@@ -685,5 +711,7 @@
   <slot>go_end_page()</slot>
   <slot>go_prev_page()</slot>
   <slot>close_window()</slot>
+  <slot>record_start()</slot>
+  <slot>record_stop()</slot>
  </slots>
 </ui>
