--- a/IoT/Jinuk/GUI/QT_screens_UI/chk_Dialog.ui
+++ b/IoT/Jinuk/GUI/QT_screens_UI/chk_Dialog.ui
@@ -10,22 +10,22 @@
     <x>0</x>
     <y>0</y>
     <width>1036</width>
-    <height>776</height>
+    <height>518</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">background: #FFF3C8;</string>
+   <string notr="true">background: #FFF3C8;border-radius: 100px;</string>
   </property>
   <widget class="QFrame" name="chk_D_frame">
    <property name="geometry">
     <rect>
      <x>52</x>
-     <y>39</y>
+     <y>23</y>
      <width>932</width>
-     <height>698</height>
+     <height>466</height>
     </rect>
    </property>
    <property name="styleSheet">
@@ -41,7 +41,7 @@
     <property name="geometry">
      <rect>
       <x>180</x>
-      <y>440</y>
+      <y>290</y>
       <width>241</width>
       <height>121</height>
      </rect>
@@ -63,7 +63,7 @@
     <property name="geometry">
      <rect>
       <x>540</x>
-      <y>440</y>
+      <y>290</y>
       <width>241</width>
       <height>121</height>
      </rect>
@@ -85,7 +85,7 @@
     <property name="geometry">
      <rect>
       <x>230</x>
-      <y>150</y>
+      <y>30</y>
       <width>481</width>
       <height>221</height>
      </rect>
