--- a/IoT/Jinuk/GUI/QT_screens_UI/chk_Dialog.ui
+++ b/IoT/Jinuk/GUI/QT_screens_UI/chk_Dialog.ui
@@ -9,101 +9,114 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1036</width>
-    <height>518</height>
+    <width>1084</width>
+    <height>547</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">background: #FFF3C8;border-radius: 100px;</string>
+   <string notr="true"/>
   </property>
-  <widget class="QFrame" name="chk_D_frame">
+  <widget class="QWidget" name="chk_widget" native="true">
    <property name="geometry">
     <rect>
-     <x>52</x>
-     <y>23</y>
-     <width>932</width>
-     <height>466</height>
+     <x>20</x>
+     <y>0</y>
+     <width>1040</width>
+     <height>520</height>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">background: #FFFFFF;border-radius: 50px;</string>
+    <string notr="true">background: #FFAFAF; border-radius: 75px;</string>
    </property>
-   <property name="frameShape">
-    <enum>QFrame::StyledPanel</enum>
-   </property>
-   <property name="frameShadow">
-    <enum>QFrame::Raised</enum>
-   </property>
-   <widget class="QPushButton" name="chk_D_button_1">
+   <widget class="QFrame" name="chk_D_frame">
     <property name="geometry">
      <rect>
-      <x>180</x>
-      <y>290</y>
-      <width>241</width>
-      <height>121</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>40</pointsize>
-      <bold>true</bold>
-     </font>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">background: #FFAB7C;color: white;</string>
-    </property>
-    <property name="text">
-     <string>확인</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="chk_D_button_2">
-    <property name="geometry">
-     <rect>
-      <x>540</x>
-      <y>290</y>
-      <width>241</width>
-      <height>121</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>40</pointsize>
-      <bold>true</bold>
-     </font>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">background: #FFAB7C;color: white;</string>
-    </property>
-    <property name="text">
-     <string>취소</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="chk_D_label">
-    <property name="geometry">
-     <rect>
-      <x>230</x>
+      <x>50</x>
       <y>30</y>
-      <width>481</width>
-      <height>221</height>
+      <width>940</width>
+      <height>460</height>
      </rect>
     </property>
-    <property name="font">
-     <font>
-      <pointsize>30</pointsize>
-      <bold>true</bold>
-     </font>
+    <property name="styleSheet">
+     <string notr="true">background: #FFFFFF;border-radius: 50px;</string>
     </property>
-    <property name="text">
-     <string>신혼부부
+    <property name="frameShape">
+     <enum>QFrame::StyledPanel</enum>
+    </property>
+    <property name="frameShadow">
+     <enum>QFrame::Raised</enum>
+    </property>
+    <widget class="QPushButton" name="chk_D_button_1">
+     <property name="geometry">
+      <rect>
+       <x>180</x>
+       <y>290</y>
+       <width>241</width>
+       <height>121</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>40</pointsize>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background: #FFAB7C;color: white;</string>
+     </property>
+     <property name="text">
+      <string>확인</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="chk_D_button_2">
+     <property name="geometry">
+      <rect>
+       <x>540</x>
+       <y>290</y>
+       <width>241</width>
+       <height>121</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>40</pointsize>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background: #FFAB7C;color: white;</string>
+     </property>
+     <property name="text">
+      <string>취소</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="chk_D_label">
+     <property name="geometry">
+      <rect>
+       <x>230</x>
+       <y>30</y>
+       <width>481</width>
+       <height>221</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>30</pointsize>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="text">
+      <string>신혼부부
 OOO, OOO
 님의 결혼식이 맞습니까?</string>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignCenter</set>
-    </property>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+    </widget>
    </widget>
   </widget>
  </widget>
