--- a/FE/wedding101/src/pages/User/UserLogin/UserLogin.css
+++ b/FE/wedding101/src/pages/User/UserLogin/UserLogin.css
@@ -1,5 +1,7 @@
 .user-login {
     background-color: #D9CFDE;
-    width: 1920px;
-height: 980px;
+    width: 100%;
     }
+.img {
+    display: flex;
+}
