--- a/FE/wedding101/src/components/common/Header.css
+++ b/FE/wedding101/src/components/common/Header.css
@@ -1,10 +1,20 @@
 .header {
-    background-color: #ffffff;
-    width: 100%;
-    position: absolute;
-
-    }
-.header.drop {
-    position: fixed;
+  background-color: #ffffff;
+  width: 100%;
+  height: 10%;
+  position: fixed;
 }
-    
+.logo {
+  margin-top: 1%;
+  float: left;
+}
+.nav-tabs {
+  margin-top: 1%;
+  float: right;
+}
+navLink {
+  text-decoration-line: none;
+}
+link > button {
+  height: 100%;
+}
