--- a/FE/wedding101/src/pages/Main/MainArea02.css
+++ b/FE/wedding101/src/pages/Main/MainArea02.css
@@ -1,8 +1,10 @@
-.main-area {
-    background-color: #FFF4F3;
-    width: 1920px;
-    height: 100%;
-    }
-.img {
-    display: flex;
+.main-area02 {
+  background-color: #fff4f3;
+  height: 100vh;
+  padding-top: 10%;
+}
+img {
+  display: flex;
+  size: 50%;
+  object-fit: scale-down;
 }
