--- a/FE/wedding101/src/pages/Main/MainArea03.css
+++ b/FE/wedding101/src/pages/Main/MainArea03.css
@@ -1,5 +1,9 @@
-.main-area {
-    background-color: #D2DAE9;
-    width: 1920px;
-height: 100%;
-    }
+.main-area03 {
+  background-color: #d2dae9;
+  height: 100vh;
+  padding-top: 10%;
+}
+img {
+  display: flex;
+  object-fit: scale-down;
+}
