front : [101] scroll ing

--- a/FE/wedding101/src/pages/Main/MainIndex.css
+++ b/FE/wedding101/src/pages/Main/MainIndex.css
@@ -1,3 +1,10 @@
+.mainindex {
+  margin: 0;
+  overflow-y: hidden;
+}
+.scrollwheelhandler::-webkit-scrollbar {
+  display: none;
+}
 .goServiceButton {
   left: 50%;
   position: fixed;
