front : [101] navbar 등 컴포넌트구성

--- a/FE/wedding101/src/pages/User/UserRegist/UserRegist.css
+++ b/FE/wedding101/src/pages/User/UserRegist/UserRegist.css
@@ -2,7 +2,7 @@
     background-color: #D9CFDE;
     width: 100%;
     }
-.img {
+.signupimg {
     position: relative;
-    
+    overflow: hidden;
 }
