--- a/FE/wedding101/src/pages/Main/MainIndex.css
+++ b/FE/wedding101/src/pages/Main/MainIndex.css
@@ -1,9 +1,20 @@
 .mainindex {
   margin: 0;
+  height: 100%;
   overflow-y: hidden;
+  /* mobile 환경에서 스크롤 방지 */
+  touch-action: none;
 }
-.scrollwheelhandler::-webkit-scrollbar {
+/* 스크롤바 숨기기 */
+::-webkit-scrollbar {
   display: none;
+}
+
+.scrollwheelhandler > div {
+  height: 100vh;
+  /* display: flex; */
+  justify-content: center;
+  /* align-items: center; */
 }
 .goServiceButton {
   left: 50%;
