IoT : [307] 사진 촬영 화면 진행 중
Former-commit-id: 316f68584257e491c7280f270ca3f7b3c26ae4b6

--- a/IoT/Jinuk/GUI/QT_screens_UI/chk_Dialog.ui
+++ b/IoT/Jinuk/GUI/QT_screens_UI/chk_Dialog.ui
@@ -65,7 +65,7 @@
       </font>
      </property>
      <property name="styleSheet">
-      <string notr="true">background: #FFAB7C;color: white;</string>
+      <string notr="true">background: #FFAB7C;color: #FFFFFF;</string>
      </property>
      <property name="text">
       <string>확인</string>
@@ -87,7 +87,7 @@
       </font>
      </property>
      <property name="styleSheet">
-      <string notr="true">background: #FFAB7C;color: white;</string>
+      <string notr="true">background: #FFAB7C;color: #FFFFFF;</string>
      </property>
      <property name="text">
       <string>취소</string>
