--- a/IoT/seonghwk/from_Jinuk/QT_screens_UI/mainwindow.ui
+++ b/IoT/seonghwk/from_Jinuk/QT_screens_UI/mainwindow.ui
@@ -38,7 +38,7 @@
       <string notr="true">background: #FFF3C8;</string>
      </property>
      <property name="currentIndex">
-      <number>6</number>
+      <number>8</number>
      </property>
      <widget class="QWidget" name="srvc_chk_page">
       <property name="styleSheet">
@@ -1367,8 +1367,8 @@ border-radius:0;</string>
       <widget class="QPushButton" name="image_next_button">
        <property name="geometry">
         <rect>
-         <x>440</x>
-         <y>360</y>
+         <x>470</x>
+         <y>410</y>
          <width>75</width>
          <height>24</height>
         </rect>
@@ -1380,8 +1380,8 @@ border-radius:0;</string>
       <widget class="QPushButton" name="image_home_button">
        <property name="geometry">
         <rect>
-         <x>470</x>
-         <y>300</y>
+         <x>530</x>
+         <y>320</y>
          <width>75</width>
          <height>24</height>
         </rect>
@@ -1406,8 +1406,8 @@ border-radius:0;</string>
       <widget class="QPushButton" name="image_prev_button">
        <property name="geometry">
         <rect>
-         <x>330</x>
-         <y>360</y>
+         <x>230</x>
+         <y>430</y>
          <width>75</width>
          <height>24</height>
         </rect>
@@ -1421,8 +1421,8 @@ border-radius:0;</string>
       <widget class="QPushButton" name="video_home_button">
        <property name="geometry">
         <rect>
-         <x>490</x>
-         <y>250</y>
+         <x>1000</x>
+         <y>370</y>
          <width>75</width>
          <height>24</height>
         </rect>
@@ -1434,8 +1434,8 @@ border-radius:0;</string>
       <widget class="QPushButton" name="video_next_button">
        <property name="geometry">
         <rect>
-         <x>450</x>
-         <y>410</y>
+         <x>1020</x>
+         <y>420</y>
          <width>75</width>
          <height>24</height>
         </rect>
@@ -1447,8 +1447,8 @@ border-radius:0;</string>
       <widget class="QLabel" name="video_label">
        <property name="geometry">
         <rect>
-         <x>290</x>
-         <y>160</y>
+         <x>630</x>
+         <y>50</y>
          <width>50</width>
          <height>16</height>
         </rect>
@@ -1460,14 +1460,40 @@ border-radius:0;</string>
       <widget class="QPushButton" name="video_prev_button">
        <property name="geometry">
         <rect>
-         <x>500</x>
-         <y>300</y>
+         <x>1040</x>
+         <y>490</y>
          <width>75</width>
          <height>24</height>
         </rect>
        </property>
        <property name="text">
         <string>Prev</string>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="video_record_button">
+       <property name="geometry">
+        <rect>
+         <x>540</x>
+         <y>710</y>
+         <width>191</width>
+         <height>71</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Record</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label">
+       <property name="geometry">
+        <rect>
+         <x>260</x>
+         <y>150</y>
+         <width>640</width>
+         <height>480</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>TextLabel</string>
        </property>
       </widget>
      </widget>
@@ -1536,8 +1562,8 @@ border-radius:0;</string>
    <slot>go_end_page()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>499</x>
-     <y>381</y>
+     <x>529</x>
+     <y>431</y>
     </hint>
     <hint type="destinationlabel">
      <x>603</x>
@@ -1552,8 +1578,8 @@ border-radius:0;</string>
    <slot>go_home_page()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>525</x>
-     <y>318</y>
+     <x>585</x>
+     <y>338</y>
     </hint>
     <hint type="destinationlabel">
      <x>637</x>
@@ -1600,8 +1626,8 @@ border-radius:0;</string>
    <slot>go_home_page()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>538</x>
-     <y>267</y>
+     <x>1048</x>
+     <y>387</y>
     </hint>
     <hint type="destinationlabel">
      <x>640</x>
@@ -1616,8 +1642,8 @@ border-radius:0;</string>
    <slot>go_end_page()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>512</x>
-     <y>432</y>
+     <x>1082</x>
+     <y>442</y>
     </hint>
     <hint type="destinationlabel">
      <x>632</x>
@@ -1648,8 +1674,8 @@ border-radius:0;</string>
    <slot>go_prev_page()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>572</x>
-     <y>319</y>
+     <x>1112</x>
+     <y>509</y>
     </hint>
     <hint type="destinationlabel">
      <x>663</x>
@@ -1664,8 +1690,8 @@ border-radius:0;</string>
    <slot>go_prev_page()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>374</x>
-     <y>380</y>
+     <x>274</x>
+     <y>450</y>
     </hint>
     <hint type="destinationlabel">
      <x>589</x>
@@ -1785,6 +1811,38 @@ border-radius:0;</string>
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>select_vid_button</sender>
+   <signal>clicked()</signal>
+   <receiver>Form</receiver>
+   <slot>go_next_page()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>923</x>
+     <y>821</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>1277</x>
+     <y>861</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>video_record_button</sender>
+   <signal>clicked()</signal>
+   <receiver>Form</receiver>
+   <slot>record_video()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>681</x>
+     <y>750</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>1278</x>
+     <y>783</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>go_next_page()</slot>
@@ -1794,5 +1852,6 @@ border-radius:0;</string>
   <slot>close_window()</slot>
   <slot>check_service_validation()</slot>
   <slot>check_input()</slot>
+  <slot>record_video()</slot>
  </slots>
 </ui>
