front : [110] 청첩장 생성페이지 -ing

--- a/FE/wedding101/src/components/WeddingInvitation/InvitationForm.css
+++ b/FE/wedding101/src/components/WeddingInvitation/InvitationForm.css
@@ -1,5 +1,7 @@
 .guest-invitation {
     background-color: #D9CFDE;
     width: 390px;
-    height: 844px;
+    height: 650px;
+
+    overflow: hidden;
     }
