--- a/FE/wedding101/src/pages/WeddingInvitation/UserInvitation/UserInvitation.css
+++ b/FE/wedding101/src/pages/WeddingInvitation/UserInvitation/UserInvitation.css
@@ -1,5 +1,15 @@
 .user-invitation {
-    background-color: #D9CFDE;
-    width: 1920px;
-height: 980px;
+    background-color: #C5DAD1;
+    height: 100vh;
     }
+navbar {
+    padding: 10%;
+}
+
+.invitation-form{
+    margin: 10px;
+    display: flex;
+}
+.cancel-button {
+    padding: 10px;
+}
