--- a/IoT/Jinuk/GUI/QT_screens_UI/mainwindow.ui
+++ b/IoT/Jinuk/GUI/QT_screens_UI/mainwindow.ui
@@ -38,7 +38,7 @@
       <string notr="true">background: #FFF3C8;</string>
      </property>
      <property name="currentIndex">
-      <number>7</number>
+      <number>4</number>
      </property>
      <widget class="QWidget" name="srvc_chk_page">
       <property name="styleSheet">
@@ -799,49 +799,19 @@ border: 3px solid brown;</string>
               </font>
              </property>
              <property name="styleSheet">
-              <string notr="true">#input_relation_combo{
-background:#FFAB7C; color:#FFFFFF;
+              <string notr="true">background:#FFAB7C; color:#FFFFFF;
 border-radius: 20px;
 border: 3px solid brown;
-padding-left:80px;
-}
-
-#input_relation_combo::on{
-border: 3px solid red;
-}
-
-#input_relation_combo::drop-down{
-border:0;
-}
-
-
-#input_relation_combo QListView{
-background:#FFAB7C;
-color:#FFFFFF;
-border:3px solid brown;
-border-radius:0;
-}
-
-#input_relation_combo QListView::item{
-
-}
-
-#input_relation_combo QListView::item::hover{
-background:#FFFFFF;
-color:#A55252
-}</string>
+padding-left:80px;</string>
              </property>
              <property name="currentText">
-              <string/>
+              <string>눌러서 선택</string>
              </property>
              <property name="iconSize">
               <size>
                <width>16</width>
                <height>16</height>
               </size>
-             </property>
-             <property name="placeholderText">
-              <string>눌러서 선택</string>
              </property>
              <property name="frame">
               <bool>true</bool>
@@ -975,9 +945,6 @@ color:#A55252
                <width>16</width>
                <height>16</height>
               </size>
-             </property>
-             <property name="placeholderText">
-              <string>눌러서 선택</string>
              </property>
              <property name="frame">
               <bool>true</bool>
