front : [117] 영상/사진 업로드 컴포넌트 완료

--- a/FE/wedding101/src/pages/Main/MainArea01.css
+++ b/FE/wedding101/src/pages/Main/MainArea01.css
@@ -4,10 +4,13 @@
 }
 .container {
   height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 img {
-  display: flex;
+  
   object-fit: scale-down;
 }
 .goServiceButton {
