front : [110] 청첩장신청페이지

--- a/FE/wedding101/src/pages/Main/MainArea02.css
+++ b/FE/wedding101/src/pages/Main/MainArea02.css
@@ -2,6 +2,19 @@
   background-color: #fff4f3;
   height: 100vh;
 }
+.area {
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.side-territory {
+  position: relative;
+}
+.invitation-form {
+  position: relative;
+  
+}
 img {
   display: flex;
   size: 50%;
