--- a/IoT/Jinuk/GUI/QT_screens_UI/mainwindow.ui
+++ b/IoT/Jinuk/GUI/QT_screens_UI/mainwindow.ui
@@ -38,7 +38,7 @@
       <string notr="true">background: #FFF3C8;</string>
      </property>
      <property name="currentIndex">
-      <number>4</number>
+      <number>7</number>
      </property>
      <widget class="QWidget" name="srvc_chk_page">
       <property name="styleSheet">
@@ -1356,7 +1356,10 @@ border-radius:0;</string>
         </rect>
        </property>
        <property name="text">
-        <string>PushButton</string>
+        <string/>
+       </property>
+       <property name="flat">
+        <bool>true</bool>
        </property>
       </widget>
       <widget class="QPushButton" name="photo_home_button">
@@ -1369,7 +1372,10 @@ border-radius:0;</string>
         </rect>
        </property>
        <property name="text">
-        <string>PushButton</string>
+        <string/>
+       </property>
+       <property name="flat">
+        <bool>true</bool>
        </property>
       </widget>
       <widget class="QWidget" name="photo_widget" native="true">
@@ -1384,7 +1390,7 @@ border-radius:0;</string>
        <property name="styleSheet">
         <string notr="true">background: #FFFFFF;border-radius:80;</string>
        </property>
-       <widget class="QWidget" name="photo_viewfinder" native="true">
+       <widget class="QCameraViewfinder" name="photo_viewfinder" native="true">
         <property name="geometry">
          <rect>
           <x>66</x>
@@ -1479,8 +1485,8 @@ border-radius:0;</string>
       <widget class="QPushButton" name="video_home_button">
        <property name="geometry">
         <rect>
-         <x>490</x>
-         <y>250</y>
+         <x>790</x>
+         <y>150</y>
          <width>75</width>
          <height>24</height>
         </rect>
@@ -1492,7 +1498,7 @@ border-radius:0;</string>
       <widget class="QPushButton" name="video_next_button">
        <property name="geometry">
         <rect>
-         <x>450</x>
+         <x>760</x>
          <y>410</y>
          <width>75</width>
          <height>24</height>
@@ -1505,8 +1511,8 @@ border-radius:0;</string>
       <widget class="QLabel" name="video_label">
        <property name="geometry">
         <rect>
-         <x>290</x>
-         <y>160</y>
+         <x>610</x>
+         <y>20</y>
          <width>50</width>
          <height>16</height>
         </rect>
@@ -1518,14 +1524,91 @@ border-radius:0;</string>
       <widget class="QPushButton" name="video_prev_button">
        <property name="geometry">
         <rect>
-         <x>500</x>
-         <y>300</y>
+         <x>760</x>
+         <y>330</y>
          <width>75</width>
          <height>24</height>
         </rect>
        </property>
        <property name="text">
         <string>Prev</string>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="video_control_button">
+       <property name="geometry">
+        <rect>
+         <x>370</x>
+         <y>590</y>
+         <width>75</width>
+         <height>24</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Record</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="video_stream">
+       <property name="geometry">
+        <rect>
+         <x>90</x>
+         <y>70</y>
+         <width>640</width>
+         <height>480</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>TextLabel</string>
+       </property>
+      </widget>
+     </widget>
+     <widget class="QWidget" name="video_review_page">
+      <widget class="QPushButton" name="video_review_prev_button">
+       <property name="geometry">
+        <rect>
+         <x>1010</x>
+         <y>440</y>
+         <width>75</width>
+         <height>24</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Retry</string>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="video_review_next_button">
+       <property name="geometry">
+        <rect>
+         <x>1010</x>
+         <y>500</y>
+         <width>75</width>
+         <height>24</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Submit</string>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="video_review_home_button">
+       <property name="geometry">
+        <rect>
+         <x>1020</x>
+         <y>370</y>
+         <width>75</width>
+         <height>24</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Home</string>
+       </property>
+      </widget>
+      <widget class="QVideoWidget" name="widget" native="true">
+       <property name="geometry">
+        <rect>
+         <x>70</x>
+         <y>130</y>
+         <width>640</width>
+         <height>480</height>
+        </rect>
        </property>
       </widget>
      </widget>
@@ -1566,6 +1649,12 @@ border-radius:0;</string>
    <class>QVideoWidget</class>
    <extends>QWidget</extends>
    <header>PySide6.QtMultimediaWidgets</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>QCameraViewfinder</class>
+   <extends>QWidget</extends>
+   <header>PySide6.QtMultimedia</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
@@ -1620,22 +1709,6 @@ border-radius:0;</string>
    </hints>
   </connection>
   <connection>
-   <sender>select_pic_button</sender>
-   <signal>clicked()</signal>
-   <receiver>Form</receiver>
-   <slot>go_next_page()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>197</x>
-     <y>796</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>640</x>
-     <y>325</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
    <sender>select_home_button</sender>
    <signal>clicked()</signal>
    <receiver>Form</receiver>
@@ -1664,22 +1737,6 @@ border-radius:0;</string>
     <hint type="destinationlabel">
      <x>640</x>
      <y>402</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>video_next_button</sender>
-   <signal>clicked()</signal>
-   <receiver>Form</receiver>
-   <slot>go_end_page()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>512</x>
-     <y>432</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>632</x>
-     <y>469</y>
     </hint>
    </hints>
   </connection>
@@ -1843,6 +1900,182 @@ border-radius:0;</string>
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>select_vid_button</sender>
+   <signal>clicked()</signal>
+   <receiver>Form</receiver>
+   <slot>go_next_page()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>908</x>
+     <y>847</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>1284</x>
+     <y>854</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>video_review_home_button</sender>
+   <signal>clicked()</signal>
+   <receiver>Form</receiver>
+   <slot>go_home_page()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>1069</x>
+     <y>384</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>1281</x>
+     <y>379</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>video_review_prev_button</sender>
+   <signal>clicked()</signal>
+   <receiver>Form</receiver>
+   <slot>go_prev_page()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>1074</x>
+     <y>451</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>1280</x>
+     <y>452</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>video_review_next_button</sender>
+   <signal>clicked()</signal>
+   <receiver>Form</receiver>
+   <slot>go_next_page()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>1051</x>
+     <y>507</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>1283</x>
+     <y>512</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>video_control_button</sender>
+   <signal>clicked()</signal>
+   <receiver>Form</receiver>
+   <slot>record_control()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>408</x>
+     <y>596</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>411</x>
+     <y>956</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>video_next_button</sender>
+   <signal>clicked()</signal>
+   <receiver>Form</receiver>
+   <slot>go_next_page()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>823</x>
+     <y>424</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>1280</x>
+     <y>440</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>photo_prev_button</sender>
+   <signal>clicked()</signal>
+   <receiver>Form</receiver>
+   <slot>go_prev_page()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>1067</x>
+     <y>732</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>1280</x>
+     <y>647</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>photo_home_button</sender>
+   <signal>clicked()</signal>
+   <receiver>Form</receiver>
+   <slot>go_home_page()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>1215</x>
+     <y>724</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>1281</x>
+     <y>752</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>select_vid_button</sender>
+   <signal>clicked()</signal>
+   <receiver>Form</receiver>
+   <slot>go_video_page()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>864</x>
+     <y>831</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>860</x>
+     <y>-6</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>photo_take_now</sender>
+   <signal>clicked()</signal>
+   <receiver>Form</receiver>
+   <slot>take_photo_now()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>1128</x>
+     <y>273</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>1082</x>
+     <y>-3</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>select_pic_button</sender>
+   <signal>clicked()</signal>
+   <receiver>Form</receiver>
+   <slot>go_photo_page()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>381</x>
+     <y>831</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>331</x>
+     <y>-9</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>go_next_page()</slot>
@@ -1852,5 +2085,9 @@ border-radius:0;</string>
   <slot>close_window()</slot>
   <slot>check_service_validation()</slot>
   <slot>check_input()</slot>
+  <slot>record_control()</slot>
+  <slot>go_video_page()</slot>
+  <slot>take_photo_now()</slot>
+  <slot>go_photo_page()</slot>
  </slots>
 </ui>
